@@ -3,14 +3,10 @@
 Misc legacy stuff -- to be phased out eventually.
 *)
 
-infix 4 addsimps delsimps addsimprocs delsimprocs;
+infix 4 addsimps delsimps;
 
 fun ctxt addsimps thms = ctxt |> Simplifier.add_simps thms;
 fun ctxt delsimps thms = ctxt |> Simplifier.del_simps thms;
-
-fun ctxt addsimprocs procs = ctxt |> fold Simplifier.add_proc procs;
-fun ctxt delsimprocs procs = ctxt |> fold Simplifier.del_proc procs;
-
 
 signature MISC_LEGACY =
 sig
